# pyspectacle

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: api_example.ipynb  interactive_browser.ipynb
pyspectacle/: __init__.py  pyspectacle.py
tests/: test_pyspectacle.py  test_quick.py
