[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspectacle"
version = "0.1.0"
description = "A Python package for parsing and browsing spectroscopy databases"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Christian J. Tai Udovicic", email = "cj.taiudovicic@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
]

[project.urls]
Homepage = "https://github.com/cjtu/pyspectacle"
Repository = "https://github.com/cjtu/pyspectacle"
